--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>www.HUNT.com</title>
   <!-- ================================================
                          google fonts start
     ==========================================================-->
@@ -72,7 +72,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing Plan </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item nav-link2">
             <a class="nav-link" href="#">Contact us</a>
           </li>
       </div>
