--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <link href="css/all.min.css" rel="stylesheet">
   <link href="css/venobox.css" rel="stylesheet">
+  <link href="css/examples.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/responsive.css" rel="stylesheet">
   <!-- ================================================
@@ -43,6 +44,16 @@
 </head>
 
 <body>
+ <!-- ================================================
+                         preloader part start
+    ==========================================================-->
+  <div id="preloader">
+    <div id="preloader-inner"></div>
+</div>
+ <!-- ================================================
+                         preloader part end
+    ==========================================================-->
+    
   <!-- ================================================
                          nav part start
     ==========================================================-->
@@ -921,7 +932,7 @@
   <script src="js/jquery.counterup.min.js"></script>
   <script src="js/waypoints.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
-
+  <script src="js/jquery.preloader.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/venobox.min.js"></script>
   <script src="js/script.js"></script>
