--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
   <section id="pricing-part">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6 col-md-4">
           <div class="price">
             <h2>Silver</h2>
             <div class="details">
@@ -564,7 +564,7 @@
             <a href="#">Join Now</a>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-6 col-md-4">
           <div class="price">
             <h2>Golden</h2>
             <div class="details">
@@ -585,7 +585,7 @@
             <a href="#">Join Now</a>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-sm-12 col-md-4">
           <div class="price">
             <h2>Platinum</h2>
             <div class="details">
@@ -840,7 +840,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6 col-md-6">
           <div class="details">
             <div class="icon">
               <i class="fas fa-map-marker-alt"></i>
@@ -851,7 +851,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6 col-md-6">
           <div class="details">
             <div class="icon">
               <i class="fas fa-phone-alt"></i>
@@ -862,7 +862,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6 col-md-6">
           <div class="details">
             <div class="icon">
               <i class="fas fa-envelope"></i>
@@ -873,7 +873,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-6 col-md-6">
           <div class="details last">
             <div class="icon">
               <i class="fas fa-globe-europe"></i>
